--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>co.luminositylabs.oss</groupId>
         <artifactId>luminositylabs-oss-parent</artifactId>
-        <version>0.0.6</version>
+        <version>0.0.7</version>
     </parent>
 
     <artifactId>luminositylabs-orientdb-utils</artifactId>
@@ -57,13 +57,18 @@
 
     <properties>
         <!-- Dependency versions -->
-        <dependency.orientdb.version>2.2.4</dependency.orientdb.version>
+        <dependency.orientdb.version>2.2.6</dependency.orientdb.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.orientechnologies</groupId>
             <artifactId>orientdb-graphdb</artifactId>
+            <version>${dependency.orientdb.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-object</artifactId>
             <version>${dependency.orientdb.version}</version>
         </dependency>
     </dependencies>
