--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,7 +4,7 @@ pipelines:
     default:
         - step:
             script:
-                - mvn -V dependency:list-repositories
-                - mvn -V dependency:tree
-                - mvn -V clean
-                - mvn -V install
+                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging dependency:list-repositories
+                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging dependency:tree
+                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging clean
+                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging install
