--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,4 +1,4 @@
-image: maven:3.5.2-jdk-8
+image: maven:3.5.3-jdk-8
 
 pipelines:
     default:
@@ -6,5 +6,4 @@ pipelines:
             script:
                 - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging dependency:list-repositories
                 - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging dependency:tree
-                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging clean
-                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging install
+                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging clean install
