--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>co.luminositylabs.oss</groupId>
         <artifactId>luminositylabs-oss-parent</artifactId>
-        <version>0.0.26</version>
+        <version>0.0.28-SNAPSHOT</version>
     </parent>
 
     <artifactId>luminositylabs-orientdb-utils</artifactId>
@@ -57,7 +57,7 @@
 
     <properties>
         <!-- Dependency versions -->
-        <dependency.orientdb.version>2.2.33</dependency.orientdb.version>
+        <dependency.orientdb.version>2.2.34</dependency.orientdb.version>
     </properties>
 
     <dependencies>
