Updated bitbucket pipelines config to use separate steps for building with zulu8, 9, and 10

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,8 +1,19 @@
-image: luminositylabs/maven:3.5.3-zulu8u163-8.28.01
-
 pipelines:
     default:
         - step:
+            image: luminositylabs/maven:3.5.3-zulu8u163-8.28.01
+            script:
+                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging dependency:list-repositories
+                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging dependency:tree
+                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging clean install
+        - step:
+            image: luminositylabs/maven:3.5.3-zulu9u04-9.0.4.1
+            script:
+                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging dependency:list-repositories
+                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging dependency:tree
+                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging clean install
+        - step:
+            image: luminositylabs/maven:3.5.3-zulu10-10.1_11
             script:
                 - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging dependency:list-repositories
                 - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging dependency:tree
