Updates: - parent project updated from luminositylabs-oss-parent v0.0.28 to v0.0.29 - orientdb updates froom v2.2.34 to v2.2.36 - modifications to bitbucket pipeline configuration to run builds with zulu8u172, zulu9u07, and zulu10u1

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,19 +1,19 @@
 pipelines:
     default:
         - step:
-            image: luminositylabs/maven:3.5.3-zulu8u163-8.28.01
+            image: luminositylabs/maven:3.5.3-zulu8u172-8.30.01
             script:
                 - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging dependency:list-repositories
                 - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging dependency:tree
                 - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging clean install
         - step:
-            image: luminositylabs/maven:3.5.3-zulu9u04-9.0.4.1
+            image: luminositylabs/maven:3.5.3-zulu9u07-9.0.7.1
             script:
                 - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging dependency:list-repositories
                 - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging dependency:tree
                 - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging clean install
         - step:
-            image: luminositylabs/maven:3.5.3-zulu10-10.1_11
+            image: luminositylabs/maven:3.5.3-zulu10u01-10.2_11
             script:
                 - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging dependency:list-repositories
                 - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging dependency:tree
