Updates: - updated parent project from v0.0.51 to v0.0.52 - Added maven profile with sonatype public release repo to sonatype-settings.xml - Modified bitbucket-pipelines.yml to include sonatype-releases profile in maven invocations

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,6 +3,6 @@ pipelines:
         - step:
             image: luminositylabs/maven:3.6.3_openjdk-11.0.6_zulu-alpine-11.37
             script:
-                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging dependency:list-repositories
-                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging dependency:tree
-                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging clean install
+                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging,sonatype-releases dependency:list-repositories
+                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging,sonatype-releases dependency:tree
+                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging,sonatype-releases clean install
