--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,4 +5,5 @@ pipelines:
             script:
                 - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging,sonatype-releases dependency:list-repositories
                 - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging,sonatype-releases dependency:tree
-                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging,sonatype-releases clean install
+                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging,sonatype-releases help:active-profiles clean install
+                - mvn -U -V -s sonatype-settings.xml -Psonatype-snapshots,sonatype-staging,sonatype-releases site
