--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>co.luminositylabs.oss</groupId>
         <artifactId>luminositylabs-oss-parent</artifactId>
-        <version>0.1.22</version>
+        <version>0.1.23-SNAPSHOT</version>
     </parent>
 
     <artifactId>luminositylabs-orientdb-utils</artifactId>
