* Dependency Version Updates - updated parent project luminositylabs-oss-parent from v0.1.23 to v0.1.24-SNAPSHOT - updated copyright header - updates to PMD rules to remove deprecated import rules and replace with codestyle UnnecessaryImport rule

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
- Copyright (c) 2016 Luminosity Labs LLC. All rights reserved.
+ Copyright (c) 2016-2021 Luminosity Labs LLC. All rights reserved.
 
  Licensed to the Apache Software Foundation (ASF) under one or more
  contributor license agreements.  See the NOTICE file distributed with this
@@ -21,7 +21,7 @@
     <parent>
         <groupId>co.luminositylabs.oss</groupId>
         <artifactId>luminositylabs-oss-parent</artifactId>
-        <version>0.1.23</version>
+        <version>0.1.24-SNAPSHOT</version>
     </parent>
 
     <artifactId>luminositylabs-orientdb-utils</artifactId>
