--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,38 +11,45 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-22.04]
-        java_version: [8, 11]
+        jdk_version: [11.0.17-zulu]
         maven_version: [3.8.6]
         include:
           - os: ubuntu-22.04
-            java_version: 11
+            jdk_version: 11.0.17-zulu
             maven_version: 3.8.6
             maven_deploy: true
             docker_build: true
-    name: Build on OS ${{ matrix.os }} with Maven ${{ matrix.maven_version }} using Zulu ${{ matrix.java_version }}
+    name: Build on OS ${{ matrix.os }} with Maven ${{ matrix.maven_version }} using JDK ${{ matrix.jdk_version }}
     runs-on: ${{ matrix.os }}
     env:
-      JAVA_HOME: /usr/lib/jvm/zulu${{ matrix.java_version }}-ca-amd64
-      MAVEN_HOME: /usr/share/maven
       MAVEN_PROPS: -Djavadoc.path=`which javadoc`
       PROFILES: gpg,release-sign-artifacts,sonatype-deployment,sonatype-snapshots,sonatype-staging,sonatype-releases
       SETTINGS: .github/settings.xml
 
     steps:
     - name: Checkout Source
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Install GPG and generate test key
       run: .github/install-gpg.sh
 
-    - name: Install Zulu OpenJDK
-      run: .github/install-zulu${{ matrix.java_version }}.sh
+    - name: Install SDKMAN and java environment
+      run: |
+        .github/install-sdkman.sh ${{ matrix.jdk_version }} ${{ matrix.maven_version }}
+        echo "SDKMAN_DIR=${HOME}/.sdkman" >> $GITHUB_ENV
 
-    - name: Install Maven
-      run: .github/install-maven.sh
+    - name: Add SDKMAN candidate environment variables
+      run: |
+        echo "JAVA_HOME=${SDKMAN_DIR}/candidates/java/current" >> $GITHUB_ENV
+        echo "MAVEN_HOME=${SDKMAN_DIR}/candidates/maven/current" >> $GITHUB_ENV
+
+    - name: Add SDKMAN candidate paths to system path
+      run: |
+        echo "${JAVA_HOME}/bin" >> $GITHUB_PATH
+        echo "${MAVEN_HOME}/bin" >> $GITHUB_PATH
 
     - name: Setup Maven repository cache
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       env:
         cache-name: m2repo
       with:
@@ -84,7 +91,7 @@ jobs:
       env:
         maven_docker_container_image_repo: luminositylabs
         maven_docker_container_image_name: maven
-        maven_docker_container_image_tag: 3.8.6_openjdk-11.0.16_zulu-alpine-11.58.15
+        maven_docker_container_image_tag: 3.8.6_openjdk-11.0.17_zulu-alpine-11.60.19
         CBD: /usr/src/build
         P: luminositylabs-oss
-      run: docker container run --rm -i -v "$(pwd)":"${CBD}" -v ${HOME}/.gnupg:/root/.gnupg -v ${P}-${{ env.maven_docker_container_image_tag }}-mvn-repo:/root/.m2 -w "${CBD}" ${{ env.maven_docker_container_image_repo }}/${{ env.maven_docker_container_image_name }}:${{ env.maven_docker_container_image_tag }} mvn -U -V -s ${{ env.SETTINGS }} -P${{ env.PROFILES }} ${{ env.MAVEN_PROPS }} dependency:list-repositories dependency:tree help:active-profiles clean install site site:stage
+      run: docker container run --rm -i -v "$(pwd)":"${CBD}" -v ${HOME}/.gnupg:/root/.gnupg -v ${P}-${{ env.maven_docker_container_image_tag }}-mvn-repo:/root/.m2 -w "${CBD}" ${{ env.maven_docker_container_image_repo }}/${{ env.maven_docker_container_image_name }}:${{ env.maven_docker_container_image_tag }} mvn -U -V -s ${{ env.SETTINGS }} -P${{ env.PROFILES }} -Djavadoc.path=/usr/bin/javadoc dependency:list-repositories dependency:tree help:active-profiles clean install site site:stage
